style: add priority dropdowns for Attributes/Abilities, fix spacing
This commit includes:
- A new dropdown for Attributes/Abilities for selecting priority: primary/secondary/tertiary
- A new <span> element for the point/dot allocation for Attributes/Abilities
- More spacing between <div> containers within <section>
- Freed .dropdown-custom width

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -111,9 +111,9 @@ main h4 {
   @apply bg-foreground text-base mt-1 py-[0.95rem] px-4 rounded-round transition border border-transparent hover:scale-[1.02] focus:border-accent focus:outline-none focus:ring-0 focus:scale-[1.02];
 }
 
-/* Custom dropdown for [Disciplines]/[Backgrounds]/[Path] */
+/* Custom dropdown for [Disciplines]/[Backgrounds]/[Path]/[Priority] */
 .dropdown-custom {
-  @apply w-2/3 bg-foreground text-sm text-center py-1 px-4 rounded-round transition border border-transparent hover:scale-[1.02] focus:border-accent focus:outline-none focus:ring-0 focus:scale-[1.02];
+  @apply bg-foreground text-sm text-center py-1 px-4 rounded-round transition border border-transparent hover:scale-[1.02] focus:border-accent focus:outline-none focus:ring-0 focus:scale-[1.02];
 }
 
 /* wrapper for dot + label (elements including dots) */
